fixed achievement window